# log_parser

./: CMakeLists.txt  README.md
include/log_parser/: log_parser.h
src/: log_parser.cpp  main.cpp
test/: log_parser_tests.cpp  test_log.txt
